# AAR-Addon

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  aar.json  build.sh  conanfile.txt  docker-compose.yml  docker.sh  hemtt.json  hemtt.toml  linux32.cmake  package.sh
.github/workflows/: ci.yml
addons/aar/: $PBOPREFIX$  config.cpp
addons/aar/events/: fn_eventHit.sqf  fn_eventMissionEnded.sqf  fn_eventPlayerDisconnected.sqf  fn_eventUnitDeleted.sqf  fn_eventUnitFired.sqf  fn_eventVehicleDeleted.sqf  fn_eventVehicleFired.sqf
addons/aar/functions/: fn_addUnitEventHandlers.sqf  fn_addVehicleEventHandlers.sqf  fn_getUnitName.sqf  fn_init.sqf  fn_reportUnitPositions.sqf  fn_reportVehiclePositions.sqf  fn_sendEvent.sqf  fn_sendJson.sqf  fn_sendUnitPosition.sqf  fn_sendVehiclePosition.sqf  fn_serializeMission.sqf  fn_serializeProjectile.sqf  fn_serializeUnit.sqf  fn_trackProjectile.sqf
extension/: Cargo.toml
extension/src/: config.rs  lib.rs  mission.rs  organizer.rs
src/addon/: PboPrefix.txt  config.cpp  functions.sqf  init.sqf
src/addon/events/: fn_eventHit.sqf  fn_eventKilled.sqf  fn_eventMissionEnded.sqf  fn_eventPlayerConnected.sqf  fn_eventPlayerDisconnected.sqf  fn_eventUnitFired.sqf  fn_eventVehicleFired.sqf
src/addon/functions/: eh_fired.sqf  eh_hit.sqf  eh_killed.sqf  eh_missionEnded.sqf  eh_playerConnected.sqf  eh_playerDisconnected.sqf  eh_unitFired.sqf  eh_vehicleFired.sqf  event.sqf  fn_addUnitEventHandlers.sqf  fn_addVehicleEventHandlers.sqf  fn_init.sqf  fn_reportMarkerPositions.sqf  fn_reportUnitPositions.sqf  fn_reportVehiclePositions.sqf  fn_sendEvent.sqf  fn_sendJson.sqf  fn_serializeJson.sqf  fn_serializeMarker.sqf  fn_serializePlayer.sqf  fn_serializePosition.sqf  fn_serializeUnit.sqf  fn_serializeVehicle.sqf  fn_trackProjectile.sqf  fnc_addEventHandlers.sqf  fnc_addUnitEventHandlers.sqf  fnc_addVehicleEventHandlers.sqf  fnc_reportUnitPositions.sqf  fnc_reportVehiclePositions.sqf  fnc_sendEvent.sqf  fnc_sendJson.sqf  fnc_serializeArray.sqf  fnc_serializeJson.sqf  (+7 more)
src/lib/: ArgsProcessor.cpp  ArgsProcessor.hpp  CMakeLists.txt  Config.cpp  Config.hpp  EventManager.cpp  EventManager.hpp  Makefile  Organizer.cpp  Organizer.hpp  Utils.cpp  Utils.hpp  build.bat  common.h  dll.cpp  httpClient.cpp  httpClient.hpp  json.cpp  main.cpp  organizer.cpp
src/test/: CMakeLists.txt  catch.hpp
src/test/Config/: parseConfigFile.cpp
src/test/EventManager/: addEvent.cpp  clearEvents.cpp  getJson.cpp
src/test/Organizer/: addEvent.cpp  parseCreateMission.cpp
src/test/httpClient/: generateHttpPost.cpp  parseData.cpp
